--- a/company-directory-app/src/index.css
+++ b/company-directory-app/src/index.css
@@ -124,6 +124,7 @@ body {
 .filter-controls {
   background-color: var(--card-bg);
   padding: 1.5rem;
+  border:2px solid var(--border-color);
   border-radius: 12px;
   box-shadow: 0 4px 12px var(--shadow-color);
   margin-bottom: 2.5rem;
@@ -185,6 +186,7 @@ body {
 .company-card {
   width:220px;
   background-color: var(--card-bg);
+  border:3px solid var(--border-color);
   border-radius: 12px;
   padding: 1rem;
   text-align: center;
